# researchprojectII

./: .gitattributes  Untitled.ipynb  active_neurons_seed1_(0.02, 0.4)_vol_(0.03, 0.9)_volcorr_0.0.pkl  active_neurons_seed1_(0.02, 0.4)_vol_(0.03, 0.9)_volcorr_0.7.pkl  active_neurons_seed1_(0.02, 0.4)_vol_(0.07, 0.5)_volcorr_0.0.pkl  active_neurons_seed1_(0.02, 0.4)_vol_(0.07, 0.9)_volcorr_0.0.pkl  active_neurons_seed1_(0.02, 0.4)_vol_(0.07, 0.9)_volcorr_0.7.pkl  all_neuron_counts_(0.02, 0.4)_(0.03, 0.9)_0.0.pkl  all_neuron_counts_(0.02, 0.4)_(0.03, 0.9)_0.7.pkl  all_neuron_counts_(0.02, 0.4)_(0.07, 0.5)_0.0.pkl  all_neuron_counts_(0.02, 0.4)_(0.07, 0.9)_0.0.pkl  all_neuron_counts_(0.02, 0.4)_(0.07, 0.9)_0.7.pkl  analysis.ipynb  analysis_correlation.ipynb  averaged_neuron_counts_per_R_(0.02, 0.4)_(0.03, 0.9)_0.0.pkl  averaged_neuron_counts_per_R_(0.02, 0.4)_(0.03, 0.9)_0.7.pkl  averaged_neuron_counts_per_R_(0.02, 0.4)_(0.07, 0.5)_0.0.pkl  averaged_neuron_counts_per_R_(0.02, 0.4)_(0.07, 0.9)_0.0.pkl  averaged_neuron_counts_per_R_(0.02, 0.4)_(0.07, 0.9)_0.7.pkl  data_analysis.ipynb  downsample.ipynb  downsample_cluster.ipynb  downsample_cluster_plots.ipynb  mean_correlation_scores_(0.02, 0.04)_(0.07, 0.9)_0.0.pkl  mean_correlation_scores_(0.02, 0.4)_(0.03, 0.9)_0.0.pkl  mean_correlation_scores_(0.02, 0.4)_(0.03, 0.9)_0.7.pkl  mean_correlation_scores_(0.02, 0.4)_(0.07, 0.5)_0.0.pkl  mean_correlation_scores_(0.02, 0.4)_(0.07, 0.9)_0.0.pkl  mean_correlation_scores_(1, 1)_(0.07, 0.5)_0.0.pkl  mean_correlation_scores_(1, 1)_(0.07, 0.9)_0.0.pkl  pyproject.toml  (+35 more)
scripts/: config.py  (+3 more)
(+45 files in other folders)
